feat: add exception generation to calls